Fixed up spacing issues

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,3 @@
-/*@import "normalise";*/
 @import "compass";
 @import "compass/reset";
 @import "compass/css3";
@@ -19,11 +18,12 @@ $susy: (
 $bp-small: 24em;
 $bp-medium: 48em;
 $bp-large: 60em;
+
 $breakpoint-no-query-fallbacks: true;
 
 @include border-box-sizing;
 
-$sidebar-background-color: #CA293E/*#2B547E*/;
+$sidebar-background-color: #CA293E;
 $content-background-color: #fafafa;
 
 body {
@@ -66,7 +66,7 @@ a {
 	}
 
 	background-color: $sidebar-background-color;
-	/*background-image: linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));*/
+	/*background-image: linear-gradient(left, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2));*/
 
 	color: #fff;
 }
@@ -106,7 +106,7 @@ header {
 	margin: 1rem 0 2rem;
 	h2 {
 		text-transform: uppercase;
-		font-weight: 300;
+		font-weight: 400;
 		font-size: 1.2rem;
 		line-height: 1.4rem;
 		margin-bottom: 1.5rem;
@@ -126,8 +126,8 @@ header {
 		}
 	}
 	p {
-		font-size: 0.8rem;
-		font-weight: 400;
+		font-size: 0.9rem;
+		font-weight: 300;
 		line-height: 1.3;
 		margin: 0 0 1.5rem;
 	}
@@ -179,7 +179,10 @@ header {
 	article {
 		@include container();
 		@include clearfix();
-		margin: 1rem 1rem 3rem 3.2rem;
+		margin: 2rem 0 3rem;
+		@include susy-breakpoint($bp-large, $susy) {
+			margin: 1rem 1rem 3rem 3.2rem;
+		}
 
 		h3 {
 			text-transform: uppercase;
@@ -209,7 +212,7 @@ header {
 			font-size: 0.8rem;
 			margin: 0 0 1rem;
 			li {
-				margin: 0 0 0.1rem 1rem;
+				margin: 0 0 0.4rem 1rem;
 				padding-left: 0.5rem;
 			}
 		}
